--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ There are many good meditation practices, and a particular type is inner meditat
 <!---->
 Unlike some techniques that use music or imagination of external images to help meditating, inner meditation emphasizes focusing on internal parts of a human body, looking at them and listening to them, namely, concentrating inward on something, not outside.
 <!---->
-It applies few fundamental techniques in concert, which include breath, concentration, relaxation, body postures, and mental power to develop life energy, or <em>qi</em>.
+It applies few fundamental techniques in concert, which include breath, concentration, relaxation, body postures, and mental power to develop life energy, or <em>qi</em> (pronounce CHEE).
 <!---->
 The development of qi inside one's body enhances health, maintains wellness, and leads to a path of spiritual enlightenment.
 </p>
@@ -71,9 +71,7 @@ The organs that we meditate about are the liver, heart, spleen, lungs, and kidne
 
 <p>Inner meditation has a broad range of practices, and we do not even attempt to present a comprehensive list of concrete methods.
 
-However, they do share some common characteristics which we discuss later.
-<!-- on the <a href="/resource/">Resource</a> page.
--->
+However, they do share some <a href="commonChars">common characteristics</a> which we discuss later.
 
 <p>In order to give a concrete picture of what an inner meditation practice may look like, this section describes one of the simplest but extremely powerful methods: the Yin Yang Breath.
 
@@ -201,8 +199,14 @@ This is also a safe approach because it builds solid foundation in the body befo
 </div>
 
 
-<div class="page-section">
-<h2 class="section-title"></h2>
-<p>
+<div class="page-section" id="commonChars">
+<h2 class="section-title">Common Characteristics</h2>
+<p>We summarize some common characteristics of inner meditation here:
+<ul>
+  <li>Focus on inwards of the body.</li>
+  <li>Cultivate life energy or qi in the body.</li>
+  <li>Its goal is to improve health, maintain wellness, and fulfill spirituality.</li>
+</ul>
+
 </p>
 </div>
