--- a/spirituality_draft.html
+++ b/spirituality_draft.html
@@ -1,14 +1,16 @@
 ---
 title: Spirituality
-permalink: /spirituality/
-date:   2016-12-02 20:06:33 -0800
+permalink: /spirituality_draft/
+date:   2016-12-02 19:06:33 -0800
 ---
 
 <div class="page-title">
 <h1 class="page-title">Inner Meditation, Life Energy, and Spirituality</h1>
 </div>
 
-It is coming...
+We described <a href="/#spirituality">a simplified path</a> to spirituality when we <a href="/">introduced inner meditation</a>.
+
+
 
 <div class="page-introduction">
 <h2 class="section-title"></h2>
