Fix a fragment link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ The organs that we meditate about are the liver, heart, spleen, lungs, and kidne
 
 <p>Inner meditation has a broad range of practices, and we do not even attempt to present a comprehensive list of concrete methods.
 
-However, they do share some <a href="commonChars">common characteristics</a> which we discuss later.
+However, they do share some <a href="/#commonChars">common characteristics</a> which we discuss later.
 
 <p>In order to give a concrete picture of what an inner meditation practice may look like, this section describes one of the simplest but extremely powerful methods: the Yin Yang Breath.
 
