--- a/event.html
+++ b/event.html
@@ -28,7 +28,7 @@ The minimum requirement for this class is that a participant can meditate by her
 
 This class does not provide detailed meditation instructions; instead, a person simply joins the class group and practices the way he normally does.
 
-After the practice we potentially offer useful tips and suggestions that help him advance his meditation.
+After the practice we will offer useful tips and suggestions that help him advance his meditation.
 
 In addition, from time to time we will introduce some special topics and practice them.
 </p>
