--- a/resource.html
+++ b/resource.html
@@ -17,11 +17,6 @@ permalink: /resource/
 </div>
 
 
-<div class="page-section">
-<h2 class="section-title">A Scientific Approach</h2>
-<p>
-</p>
-</div>
 -->
 
 <div class="page-section">
@@ -42,4 +37,25 @@ These are some example exercises, but not limited to:
 </p>
 <p>Just like doing any body work, keeping good forms is extremely important in any of those exercises.
 </p>
+</div>
+
+
+<div class="page-section">
+<h2 class="section-title">Inner Meditation Traditions</h2>
+<p>
+Many traditions have inner meditation practices.
+</p>
+
+<p>
+One of them is Taoist meditation.
+</p>
+
+<p>
+Another is Buddhist meditation.
+</p>
+
+<p>
+Another is ...
+</p>
+
 </div>
