--- a/spirituality_draft.html
+++ b/spirituality_draft.html
@@ -4,25 +4,37 @@ permalink: /spirituality_draft/
 date:   2016-12-02 19:06:33 -0800
 ---
 
+
 <div class="page-title">
 <h1 class="page-title">Inner Meditation, Life Energy, and Spirituality</h1>
 </div>
 
-We described <a href="/#spirituality">a simplified path</a> to spirituality when we <a href="/">introduced inner meditation</a>.
-
-
-
 <div class="page-introduction">
-<h2 class="section-title"></h2>
 <p>
+We have described <a href="/#spirituality">a highly simplified version</a> of how inner meditation improves health, maintains wellness, and fulfills spirituality.
+
+One of the central links is life energy, or called <em>qi</em> (pronounce CHEE) in inner meditation traditions.
 </p>
 </div>
 
 
 <div class="page-section">
-<h2 class="section-title"></h2>
+<h2 class="section-title">Life Energy--Qi</h2>
 <p>
+Qi is rather abstract for people who have not experienced or perceived it, however many other people can feel it after some time of practice.
+
+Indeed, it can be elusive even for people who have done meditation for years.
+
+We are attempting to explain it here from the practice point of view, i.e., how to start feel and cultivate it in meditation practices.
+
+We hope that biologists and doctors can explain and quantify it in the future.
 </p>
+
+
+<p>
+
+</p>
+
 </div>
 
 
