--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ The <a href="/event/">Event</a> page has more information.
 
 
 <div class="page-section" id="spirituality">
-<h2 class="section-title">A Path to Health, Wellness, and Spirituality</h2>
+<h2 class="section-title">A Path to Good Health, Wellness, and Enlightenment</h2>
 
 <p>The <a href="#basicPractice">yin yang breath</a> exercise described above suggests a practical path of spiritual development.
 
@@ -205,7 +205,7 @@ This is also a safe approach because it builds solid foundation in the body befo
 <ul>
   <li>Focus on inwards of the body.</li>
   <li>Cultivate life energy or qi in the body.</li>
-  <li>Its goal is to improve health, maintain wellness, and fulfill spirituality.</li>
+  <li>Its goal is to improve health, maintain wellness, and fulfill spiritual enlightenment.</li>
 </ul>
 
 </p>
