--- a/spirituality_draft.html
+++ b/spirituality_draft.html
@@ -6,7 +6,7 @@ date:   2016-12-02 19:06:33 -0800
 
 
 <div class="page-title">
-<h1 class="page-title">Inner Meditation, Life Energy, and Spirituality</h1>
+<h1 class="page-title">Inner Meditation--Balanced Body and Mind</h1>
 </div>
 
 <div class="page-introduction">
