--- a/index.html
+++ b/index.html
@@ -188,9 +188,11 @@ In addition, the life energy helps him maintain a relatively high energy level w
 </p>
 
 
-<p>In this framework of meditation, spiritual development and enlightenment is natural results of cultivating the life energy.
+<p>In this framework of meditation, there is no mystery or superstition in what happens to your body and mind.
 
-This is also a safe approach because it builds solid foundation in the body before the brain is activated to generate transcendent experience.
+You make every achievement based on how much life energy you can cultivate inside you, and spiritual development and enlightenment is natural results of this cultivation.
+
+This is also a safe approach because it builds solid foundation in your body before your brain is activated to generate transcendent experience.
 </p>
 
 
