--- a/event.html
+++ b/event.html
@@ -22,7 +22,7 @@ Its goal is to teach useful techniques so that students will be able to practice
 <p>
 The second class is <strong>Intermediate Inner Meditation</strong>.
 
-As its name suggests, it targets to people who have practiced meditation for a while and want to keep at or advance to certain levels.
+As its name suggests, it targets to people who have practiced meditation intensively (not limited to inner meditation) and want to keep at or advance to certain levels.
 
 The minimum requirement for this class is that a participant can meditate by herself for 45 minutes without requiring any instructions.
 
