--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ That part of a human body has tremendous amount of sexual energy.
 
 It is very difficult for a normal person to control and utilize the sexual energy when it builds up.
 
-Inner meditation practices transform the sexual energy into life energy, and the latter circulates inside the body and nourishes tissues and organs.
+Inner meditation practices help a practitioner successfully manage his sexual energy by transforming it into life energy, and the latter circulates inside the body and nourishes tissues and organs.
 
 This greatly enhances a person's immune system and improves his health.
 
