--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ The organs that we meditate about are the liver, heart, spleen, lungs, and kidne
 
 However, they do share some <a href="/#commonChars">common characteristics</a> which we discuss later.
 
-<p>In order to give a concrete picture of what an inner meditation practice may look like, this section describes one of the simplest but extremely powerful methods: the Yin Yang Breath.
+<p id="YinYangBreath">In order to give a concrete picture of what an inner meditation practice may look like, this section describes one of the simplest but extremely powerful methods: the Yin Yang Breath.
 
 It roughly consists of the following steps:
 <ol>
