--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ For female, circle clockwise first and then counterclockwise.
 
 
 <p>
-Another example practice is <a href="http://www.universal-tao.com/article/smile.html">the inner smile</a> (<a href="https://www.youtube.com/watch?v=A4pAKj2LH84">video</a>), which involves meditating about each organ mentioned above and transforms negative emotion into positive energy.
+Another example practice is <a href="http://www.universal-tao.com/article/smile.html">the Inner Smile</a> (<a href="https://www.youtube.com/watch?v=A4pAKj2LH84">video</a>), which involves meditating about each organ mentioned above and transforms negative emotion into positive energy.
 </p>
 
 <p>
