--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ The <a href="/event/">Event</a> page has more information.
 <div class="page-section" id="spirituality">
 <h2 class="section-title">A Path to Good Health, Wellness, and Enlightenment</h2>
 
-<p>The <a href="#basicPractice">yin yang breath</a> exercise described above suggests a practical path of spiritual development.
+<p>The <a href="#basicPractice">Yin Yang Breath</a> exercise described above suggests a practical path of spiritual development.
 
 Inner meditation regards a human body as the fundamental building material for higher level spirituality.
 
