Update event schedule.

--- a/event.html
+++ b/event.html
@@ -46,10 +46,10 @@ In addition, from time to time we will introduce some special topics and practic
 </tr>
 <tr>
   <td>Time:</td>
-  <td>10:00-11:00am every Saturday unless announced otherwise</td>
+  <td>10:00-11:00am every Saturday</td>
 </tr>
-<tr><td>Starting date:</td>
-<td>December 3, 2016</td>
+<tr><td>Current dates:</td>
+<td>12/03/2016-02/04/2017</td>
 </tr>
 <tr><td>Instructor:</td>
 <td>Lewis Young</td>
@@ -69,10 +69,10 @@ In addition, from time to time we will introduce some special topics and practic
 </tr>
 <tr>
   <td>Time:</td>
-  <td>11:00am-12:00pm every Saturday unless announced otherwise</td>
+  <td>11:00am-12:00pm every Saturday</td>
 </tr>
-<tr><td>Starting date:</td>
-<td>December 3, 2016</td>
+<tr><td>Current dates:</td>
+<td>12/03/2016-02/04/2017</td>
 </tr>
 <tr><td>Instructor:</td>
 <td>Lewis Young</td>
