--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ The most effective way of learning such skill is studying from an instructor in 
 <div class="page-section">
 <h2 class="section-title">Inner Meditation Classes</h2>
 <p>
-A series of inner meditation classes will be available at <a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> every Saturday starting on December 3, 2016.
+A series of inner meditation classes are available at <a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> every Saturday.
 
 The <a href="/event/">Event</a> page has more information.
 </p>
