Revise the first paragraph.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@ date:   2016-12-02 19:06:33 -0800
 <p>
 <img id="img-inner-orbit" src="images/orbits-points.png"
       height="300" alt="inner energy flow"/>
-There are many good meditation practices, and a particular type is inner meditation.
-<!---->
-Unlike some techniques that use music or imagination of external images to help meditating, inner meditation emphasizes focusing on internal parts of a human body, looking at them and listening to them, namely, concentrating inward on something, not outside.
-<!---->
-It applies few fundamental techniques in concert, which include breath, concentration, relaxation, body postures, and mental power to develop life energy, or <em>qi</em> (pronounce CHEE).
-<!---->
-The development of qi inside one's body enhances health, maintains wellness, and leads to a path of spiritual enlightenment.
+      
+There are many good meditation practices, and one particularly interesting form is inner meditation.
+
+Unlike some techniques that use music, or imagination of external images to help meditating, inner meditation emphasizes focusing on internal parts of your own body.
+
+Looking at, listening to, and feeling the insides of you own self. Namely, concentrating inward, not outside.
+
+It applies few fundamental techniques in concert, which include breath, concentration, relaxation, body posture, and mental power to develop life energy, also known as <em>qi</em> (pronounce CHEE).
+
+The development of one's own qi within the body enhances health, generates a sense of calm and well-being, replenishes inner energy reserves, and leads you along on a path of spiritual enlightenment.
 </p>
 
 <p>
