Minor phrasing change.

--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@ date:   2016-12-02 19:06:33 -0800
 <p>
 <img id="img-inner-orbit" src="images/orbits-points.png"
       height="300" alt="inner energy flow"/>
-      
+
 There are many good meditation practices, and one particularly interesting form is inner meditation.
 
-Unlike some techniques that use music, or imagination of external images to help meditating, inner meditation emphasizes focusing on internal parts of your own body.
+Unlike some techniques that use music, or imagination of external images to help meditating, inner meditation emphasizes focusing on internal parts of your own body, looking at, listening to, and feeling the insides of you own self. Namely, concentrating inward, not outside.
 
-Looking at, listening to, and feeling the insides of you own self. Namely, concentrating inward, not outside.
+It applies few basic techniques in concert, which include breath, concentration, relaxation, body posture, and mental power to develop life energy, also known as <em>qi</em> (pronounce CHEE).
 
-It applies few fundamental techniques in concert, which include breath, concentration, relaxation, body posture, and mental power to develop life energy, also known as <em>qi</em> (pronounce CHEE).
-
-The development of one's own qi within the body enhances health, generates a sense of calm and well-being, replenishes inner energy reserves, and leads you along on a path of spiritual enlightenment.
+The development of qi within your own body enhances health, generates a sense of calm and well-being, replenishes inner energy reserves, and leads you along on a path of spiritual enlightenment.
 </p>
 
 <p>
