Update event page.

--- a/event.html
+++ b/event.html
@@ -46,14 +46,10 @@ In addition, from time to time we will introduce some special topics and practic
 </tr>
 <tr>
   <td>Time:</td>
-  <td>10:00-11:00am every Saturday</td>
+  <td>10:00-11:00am</td>
 </tr>
-<tr><td>Current dates:</td>
-<td>12/03/2016-02/04/2017</td>
-</tr>
-<tr><td>Instructor:</td>
-<td>Lewis Young</td>
-</tr>
+<tr><td>Dates:</td>
+<td>Every Saturday starting on 04/01/2017</td>
 </tr>
 <tr><td>Donation:</td>
 <td>$0-10</td>
@@ -69,13 +65,10 @@ In addition, from time to time we will introduce some special topics and practic
 </tr>
 <tr>
   <td>Time:</td>
-  <td>11:00am-12:00pm every Saturday</td>
+  <td>11:00am-12:00pm</td>
 </tr>
-<tr><td>Current dates:</td>
-<td>12/03/2016-02/04/2017</td>
-</tr>
-<tr><td>Instructor:</td>
-<td>Lewis Young</td>
+<tr><td>Dates:</td>
+  <td>Every Saturday starting on 04/01/2017</td>
 </tr>
 </tr>
 <tr><td>Donation:</td>
@@ -87,13 +80,10 @@ In addition, from time to time we will introduce some special topics and practic
 </tr>
 <tr>
   <td>Equipment:</td>
-  <td>A mat which you can comfortably sit on. A covering blanket if you need it.</td>
+  <td>A mat which you can comfortably sit on. A blanket to cover your legs.</td>
 </tr>
 </table>
 
-<p style="margin-top: 2ex">
-<strong>Note about equipment:</strong> The AUM center has chairs, and participants of the Basics of Inner Meditation class do not need to bring any equipment. But it is perfectly OK if you prefer sitting on your mat. In that case, feel free to bring your own mat to the class. There are also few yoga mats in the center but the quantity is very limited. Please do not count on them.
-<p>
 
 <div class="page-section">
 <h2 class="section-title">Fee</h2>
