Add half day meditation retreat.

--- a/event.html
+++ b/event.html
@@ -10,19 +10,19 @@ permalink: /event/
 <p>
 <a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> kindly provides a venue for teaching inner meditation practices.
 
-Two classes are available.
+Three classes are available.
 
-The first one is <strong>Basics of Inner Meditation</strong>, which is like knowing ABC for learning English.
+The first one is <strong>Basics of Inner Meditation</strong>.
 
 It provides students with detailed, step-by-step instructions of how to practice inner meditation.
 
-Its goal is to teach useful techniques so that students will be able to practice on their own after the class.
+Its goal is to allow students to practice on their own after the class.
 </p>
 
 <p>
 The second class is <strong>Intermediate Inner Meditation</strong>.
 
-As its name suggests, it targets to people who have practiced meditation intensively (not limited to inner meditation) and want to keep at or advance to certain levels.
+It targets to people who have practiced meditation intensively (not limited to inner meditation) and want to keep at or advance to certain levels.
 
 The minimum requirement for this class is that a participant can meditate by herself for 45 minutes without requiring any instructions.
 
@@ -30,7 +30,16 @@ This class does not provide detailed meditation instructions; instead, a person 
 
 After the practice we will offer useful tips and suggestions that help him advance his meditation.
 
-In addition, from time to time we will introduce some special topics and practice them.
+From time to time we will introduce some special topics and practice them.
+</p>
+
+<p>The third class is <strong>Half Day Meditation Retreat</strong>.
+
+This is a special event for advanced practitioners who want to merge into deep meditation states.
+
+It consists of four meditation sessions with each 45 minutes followed by a 15-minute break.
+
+This event runs for about four hours.
 </p>
 </div>
 
@@ -45,14 +54,14 @@ In addition, from time to time we will introduce some special topics and practic
   <td><address>149 South Blvd, San Mateo, CA 94402</address></td>
 </tr>
 <tr>
-  <td>Time:</td>
-  <td>10:00-11:00am</td>
+  <td>Date &amp;Time:</td>
+  <td>TBD</td>
 </tr>
-<tr><td>Dates:</td>
-<td>Every Saturday starting on 04/01/2017</td>
+<tr><td>Duration:</td>
+<td>1 hour</td>
 </tr>
-<tr><td>Donation:</td>
-<td>$0-10</td>
+<tr><td>Fee:</td>
+<td>$10 in advance; $15 at door</td>
 </tr>
 </table>
 
@@ -64,11 +73,11 @@ In addition, from time to time we will introduce some special topics and practic
   <td><address>149 South Blvd, San Mateo, CA 94402</address></td>
 </tr>
 <tr>
-  <td>Time:</td>
-  <td>11:00am-12:00pm</td>
+  <td>Date &amp; Time:</td>
+  <td>TBD</td>
 </tr>
-<tr><td>Dates:</td>
-  <td>Every Saturday starting on 04/01/2017</td>
+<tr><td>Duration:</td>
+  <td>1 hour</td>
 </tr>
 </tr>
 <tr><td>Donation:</td>
@@ -84,12 +93,40 @@ In addition, from time to time we will introduce some special topics and practic
 </tr>
 </table>
 
+<table>
+  <caption class="class-name">Half Day Meditation Retreat</caption>
+<tr>
+  <td>Address:</td>
+  <td><address>149 South Blvd, San Mateo, CA 94402</address></td>
+</tr>
+<tr>
+  <td>Date &amp; Time:</td>
+  <td>TBD</td>
+</tr>
+<tr><td>Duration:</td>
+  <td>4 hours</td>
+</tr>
+</tr>
+<tr><td>Donation:</td>
+<td>$0-20</td>
+</tr>
+<tr>
+  <td>Prerequisite:</td>
+  <td>Able to meditate by yourself for hours</td>
+</tr>
+<tr>
+  <td>Equipment:</td>
+  <td>A mat which you can comfortably sit on. A blanket to cover your legs.</td>
+</tr>
+</table>
 
 <div class="page-section">
 <h2 class="section-title">Fee</h2>
-<p>We call for a sliding scale $10 donation for each class session to support the event, which means please fund us based on your ability.
+<p>We charge $10 ($15 at door) for a session of the Basics class.
 
-AUM's policy is that no one is ever turned away due to lack of fund.
+  We call for a sliding scale $10-20 donation for other sessions to support the event. Please fund us based on your ability.
+
+We have the same policy as AUM--no one is ever turned away due to lack of fund.
 
 If you are curious about this policy then you should check out this <a href="http://www.artsunitymovements.com/">awesome organization</a>.
 </div>
