Add half day meditation retreat.

--- a/event.html
+++ b/event.html
@@ -61,7 +61,7 @@ This event runs for about four hours.
 <td>1 hour</td>
 </tr>
 <tr><td>Fee:</td>
-<td>$10 in advance; $15 at door</td>
+<td>$10</td>
 </tr>
 </table>
 
@@ -122,7 +122,7 @@ This event runs for about four hours.
 
 <div class="page-section">
 <h2 class="section-title">Fee</h2>
-<p>We charge $10 ($15 at door) for a session of the Basics class.
+<p>We charge $10 for a session of the Basics class.
 
   We call for a sliding scale $10-20 donation for other sessions to support the event. Please fund us based on your ability.
 
