--- a/event.html
+++ b/event.html
@@ -8,38 +8,45 @@ permalink: /event/
 <div class="page-introduction">
 <h2 class="section-title">Classes</h2>
 <p>
-<a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> kindly provides a venue for teaching inner meditation practices.
-
-Three classes are available.
-
-The first one is <strong>Basics of Inner Meditation</strong>.
-
-It provides students with detailed, step-by-step instructions of how to practice inner meditation.
-
-Its goal is to allow students to practice on their own after the class.
+<a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> kindly provides a venue for teaching inner meditation.
 </p>
 
 <p>
-The second class is <strong>Intermediate Inner Meditation</strong>.
+Three classes are available.
 
-It targets to people who have practiced meditation intensively (not limited to inner meditation) and want to keep at or advance to certain levels.
+The first one is <strong>Basics of Inner Meditation</strong> in which we will guide participants to go through meditation sessions step by step, with the goal of helping you be able to practice on your own after the class.
 
-The minimum requirement for this class is that a participant can meditate by herself for 45 minutes without requiring any instructions.
-
-This class does not provide detailed meditation instructions; instead, a person simply joins the class group and practices the way he normally does.
-
-After the practice we will offer useful tips and suggestions that help him advance his meditation.
-
-From time to time we will introduce some special topics and practice them.
+The class is about one hour, but your own practice session may range from 15 to 30 minutes like most beginners.
 </p>
 
-<p>The third class is <strong>Half Day Meditation Retreat</strong>.
+<p>
+The second one is <strong>Intermediate Inner Meditation</strong>.
 
-This is a special event for advanced practitioners who want to merge into deep meditation states.
+This class does not provide detailed instructions.
 
-It consists of four meditation sessions with each 45 minutes followed by a 15-minute break.
+Instead, you simply join the class group and practice the way you normally does.
 
-This event runs for about four hours.
+At the end of the class, we will offer useful tips and suggestions that help you advance your practice.
+
+From time to time we will introduce and practice some special topics.
+
+The minimum requirement for this class is that you can meditate by yourself for at least 40 minutes without requiring any instructions.
+
+This class is also around one hour.
+</p>
+
+<p>
+The third one is <strong>Half Day Meditation Retreat</strong>.
+
+This is for advanced practitioners who want to merge their body and mind into deep meditation states.
+
+It consists of four sessions with each being 45 minutes followed by a 15-minute break.
+
+The entire event runs for about four hours and is called half day retreat.
+
+During the half day period of time, you quiet down and focus on yourself, leaving any worldly attachment out of you.
+
+It's a fantastic way to recharge yourself with Qi.
 </p>
 </div>
 
@@ -124,7 +131,7 @@ This event runs for about four hours.
 <h2 class="section-title">Fee</h2>
 <p>We charge $10 for a session of the Basics class.
 
-  We call for a sliding scale $10-20 donation for other sessions to support the event. Please fund us based on your ability.
+We call for a sliding scale $10-20 donation for other class sessions to support the event. Please fund us based on your ability.
 
 We have the same policy as AUM--no one is ever turned away due to lack of fund.
 
