--- a/event.html
+++ b/event.html
@@ -138,10 +138,16 @@ We have the same policy as AUM--no one is ever turned away due to lack of fund.
 If you are curious about this policy then you should check out this <a href="http://www.artsunitymovements.com/">awesome organization</a>.
 </div>
 
+<div class="page-section">
+<h2 class="section-title">Get Connected</h2>
+<p>
+Please fill out <a href="http://sv.mikecrm.com/j1xDwH5">this form</a> if you are interested in being connected with us and being updated with new events or schedule change.</p>
+</div>
+
 
 <div class="page-section">
 <h2 class="section-title">Instructor Bio</h2>
 <p>
-Lewis Young has practiced meditation for more than a decade. He practiced Qi Gong and was able to heal when he was a university student. Later he studied Taoist inner alchemy and Buddhist Zen meditation. He has taught Taoist inner meditation classes ranging from basic to advanced level. He holds a Ph.D. degree in Computer Science, and he is good at understanding and interpreting spiritual tradition with scientific attitude. His teaching style is using simple contemporary concepts to explain inner meditation practices that are considered mysterious.
+Lewis Young is a veteran meditator and meditation instructor. He practiced Qi Gong and was able to heal when he was a university student. Later he studied Taoist inner alchemy and Buddhist Zen meditation. He has taught Taoist inner meditation classes ranging from the basic to advanced level. He has a Ph.D. degree in Computer Science, and he is good at understanding and interpreting spiritual traditions with a scientific attitude. His teaching style is using simple contemporary concepts to explain inner meditation practices that are considered mysterious.
 </p>
 </div>
