Add suvey link.

--- a/event.html
+++ b/event.html
@@ -54,6 +54,10 @@ It's a fantastic way to recharge yourself with Qi.
 <div class="page-section">
 <h2 class="section-title">Schedule</h2>
 
+<p>
+We are conducting a <a href="https://www.meetup.com/InnerMeditation/events/238708619/">meetup survey</a> to decide the most convenient time and day of the week for the classes.
+</p>
+
 <table>
   <caption class="class-name">Basics of Inner Meditation</caption>
 <tr>
