Use best time..

--- a/event.html
+++ b/event.html
@@ -55,7 +55,7 @@ It's a fantastic way to recharge yourself with Qi.
 <h2 class="section-title">Schedule</h2>
 
 <p>
-We are conducting a <a href="https://www.meetup.com/InnerMeditation/events/238708619/">meetup survey</a> to decide the most convenient time and day of the week for the classes.
+We are conducting a <a href="https://www.meetup.com/InnerMeditation/events/238708619/">meetup survey</a> to decide the best time and day of the week for the classes.
 </p>
 
 <table>
