--- a/payment.html
+++ b/payment.html
@@ -9,10 +9,10 @@ permalink: /pay/
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="3ECGBDL95P8CS">
 <table>
-<tr><td><input type="hidden" name="on0" value="Name of drop-down menu">Name of drop-down menu</td></tr><tr><td><select name="os0">
-	<option value="Option 1">Option 1 $1 USD</option>
-	<option value="Option 2">Option 2 $10 USD</option>
-	<option value="Option 3">Option 3 $100 USD</option>
+<tr><td><input type="hidden" name="on0" value="Donation Amount">Donation Amount</td></tr><tr><td><select name="os0">
+	<option value="Amount 1:">Amount 1: $5.00 USD</option>
+	<option value="Amount 2:">Amount 2: $10.00 USD</option>
+	<option value="Amount 3:">Amount 3: $20.00 USD</option>
 </select> </td></tr>
 </table>
 <input type="hidden" name="currency_code" value="USD">
