Edit the first paragraph. Add Paypal buttons.

--- a/event.html
+++ b/event.html
@@ -1,62 +1,70 @@
 ---
 layout: page
 title:  Event
-date:   2016-11-24 10:06:33 -0800
+#date:   2016-11-24 10:06:33 -0800
 permalink: /event/
 ---
 
 <div class="page-introduction">
 <h2 class="section-title">Classes</h2>
-<p>
-<a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> kindly provides a venue for teaching inner meditation.
-</p>
 
 <p>
-Three classes are available.
+We offer two classes at different levels.
 
-The first one is <strong>Basics of Inner Meditation</strong> in which we will guide participants to go through meditation sessions step by step, with the goal of helping you be able to practice on your own after the class.
+The first one is <strong>Basics of Inner Meditation</strong> in which we guide you through practice sessions step by step, with the goal of helping you be able to practice on your own after the class.
 
 The class is about one hour, but your own practice session may range from 15 to 30 minutes like most beginners.
 </p>
 
+
 <p>
-The second one is <strong>Intermediate Inner Meditation</strong>.
+The second one is <strong>Half Day Meditation Retreat</strong>.
 
-This class does not provide detailed instructions.
+It is for experienced meditators who want to have a prolonged period of time to develop their body and mind. Please read the following instructions before RSVPing.
 
-Instead, you simply join the class group and practice the way you normally does.
+<ul>
+<li>The entire retreat runs for about 4 hours. It consists of 4 meditation sessions with each being 40 minutes followed by a 20-minute break.
 
-At the end of the class, we will offer useful tips and suggestions that help you advance your practice.
+<li>The first session starts at 8:45am, and the next three sessions start at 9:45am, 10:45am, and 11:45am, respectively.
 
-From time to time we will introduce and practice some special topics.
+<li>We start with body stretch at 8:30am, which facilitates a sitting posture.
 
-The minimum requirement for this class is that you can meditate by yourself for at least 40 minutes without requiring any instructions.
+<li>We ring a bell at the start and end of each session. We also ring a bell three minutes before the start of a session so that you can go to your mat in time.
 
-This class is also around one hour.
+<li>Please make every effort to keep your meditation states during breaks. In the breaks, you may practice walking meditation, yoga, or stretch to release tension or sore in your body, but your mind should continue meditating.
+
+<li>If you do not want to stop during a break, then feel free to continue your practice during the break. We purposely make this a retreat environment to minimize interruptions and distractions.
+
+<li>The idea is to create an environment for a half day retreat in which you may merge into deep meditation states, synchronize your body and mind, discover and enjoy deep connections inside you and among you, us, and the universe.
+
+<li>We suggest you to bring and use your eye cover and earplugs to turn this retreat into a dark and silent meditation experience. A dark and silent environment minimizes external sensory stimuli and makes it easy to focus insides of your body. 
+
+<li>During the retreat please refrain from talking, using a cell phone, reading, etc.&nbsp;because these activities may interrupt your and other people's meditation.
+
+<li>If you have questions or concerns about meditation or the event during the retreat, please talk to the retreat organizer.
+
+<li>If it's difficult for you to take the entire retreat, say you want to meditate for one session, then we encourage you to join the body stretch and the first session. You can peacefully leave the retreat after the first session.
+
+<li>You may join a session during a break. Once a session starts, please do not join it. You should wait until it finishes. Then you may join the next session.
+
+<li>You may leave the retreat during a break. Please do not do it during meditation sessions because it may interrupt other people's meditation.
+
+<li>Minimum requirement: the minimum length of practice is one session, so you must be able to meditate for 40 minutes. 
+
+</ul>
+
 </p>
 
 <p>
-The third one is <strong>Half Day Meditation Retreat</strong>.
-
-This is for advanced practitioners who want to merge their body and mind into deep meditation states.
-
-It consists of four sessions with each being 45 minutes followed by a 15-minute break.
-
-The entire event runs for about four hours and is called half day retreat.
-
-During the half day period of time, you quiet down and focus on yourself, leaving any worldly attachment out of you.
-
-It's a fantastic way to recharge yourself with Qi.
+<a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center (AUM)</a> kindly provides a venue for us to teach inner meditation and organize meditation events.
 </p>
+
+
 </div>
 
 
 <div class="page-section">
 <h2 class="section-title">Schedule</h2>
-
-<p>
-We are conducting a <a href="https://www.meetup.com/InnerMeditation/events/238708619/">meetup survey</a> to decide the best time and day of the week for the classes.
-</p>
 
 <table>
   <caption class="class-name">Basics of Inner Meditation</caption>
@@ -66,7 +74,7 @@ We are conducting a <a href="https://www.meetup.com/InnerMeditation/events/23870
 </tr>
 <tr>
   <td>Date &amp;Time:</td>
-  <td>TBD</td>
+  <td>1:30-2:30pm every Sunday, Starting on 4/23/2017</td>
 </tr>
 <tr><td>Duration:</td>
 <td>1 hour</td>
@@ -74,35 +82,18 @@ We are conducting a <a href="https://www.meetup.com/InnerMeditation/events/23870
 <tr><td>Fee:</td>
 <td>$10</td>
 </tr>
-</table>
-
-
-<table>
-  <caption class="class-name">Intermediate Inner Meditation</caption>
-<tr>
-  <td>Address:</td>
-  <td><address>149 South Blvd, San Mateo, CA 94402</address></td>
-</tr>
-<tr>
-  <td>Date &amp; Time:</td>
-  <td>TBD</td>
-</tr>
-<tr><td>Duration:</td>
-  <td>1 hour</td>
-</tr>
-</tr>
-<tr><td>Donation:</td>
-<td>$0-10</td>
-</tr>
-<tr>
-  <td>Prerequisite:</td>
-  <td>Able to meditate by yourself for 45 minutes</td>
-</tr>
-<tr>
-  <td>Equipment:</td>
-  <td>A mat which you can comfortably sit on. A blanket to cover your legs.</td>
+<tr><td></td>
+<td>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="5FUM9CFBUEXHC">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynow_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
+</td>
 </tr>
 </table>
+
 
 <table>
   <caption class="class-name">Half Day Meditation Retreat</caption>
@@ -112,14 +103,23 @@ We are conducting a <a href="https://www.meetup.com/InnerMeditation/events/23870
 </tr>
 <tr>
   <td>Date &amp; Time:</td>
-  <td>TBD</td>
+  <td>8:30am-12:30pm every Sunday, Starting on 4/23/2017</td>
 </tr>
 <tr><td>Duration:</td>
-  <td>4 hours</td>
+  <td>4 hour</td>
 </tr>
 </tr>
 <tr><td>Donation:</td>
-<td>$0-20</td>
+  <td>$20 sliding scale</td>
+</tr>
+<tr><td></td>
+  <td><form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="N47JJVFXNFR64">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
+</td>
 </tr>
 <tr>
   <td>Equipment:</td>
@@ -127,11 +127,12 @@ We are conducting a <a href="https://www.meetup.com/InnerMeditation/events/23870
 </tr>
 </table>
 
+
 <div class="page-section">
 <h2 class="section-title">Fee</h2>
-<p>We charge $10 for a session of the Basics class.
+<p>We charge $10 for the Basics class.
 
-We call for a sliding scale $10-20 donation for other class sessions to support the event. Please fund us based on your ability.
+We call for a sliding scale $20 donation for the meditation retreat.
 
 We have the same policy as AUM--no one is ever turned away due to lack of fund.
 
@@ -148,6 +149,6 @@ Please fill out <a href="http://sv.mikecrm.com/j1xDwH5">this form</a> if you are
 <div class="page-section">
 <h2 class="section-title">Instructor Bio</h2>
 <p>
-Lewis Young is a veteran meditator and meditation instructor. He practiced Qi Gong and was able to heal when he was a university student. Later he studied Taoist inner alchemy and Buddhist Zen meditation. He has taught Taoist inner meditation classes ranging from the basic to advanced level. He has a Ph.D. degree in Computer Science, and he is good at understanding and interpreting spiritual traditions with a scientific attitude. His teaching style is using simple contemporary concepts to explain inner meditation practices that are considered mysterious.
+Lewis Young is a veteran meditator and meditation instructor. He practiced Qi Gong and was able to heal when he was a college student. Later he studied Taoist inner alchemy and Buddhist Zen meditation. He has taught Taoist inner meditation classes ranging from the basic to advanced level. He has a Ph.D. degree in Computer Science, and he is good at understanding and interpreting spiritual traditions with a scientific attitude. His teaching style is using simple contemporary concepts to explain inner meditation practices that are considered mysterious.
 </p>
 </div>
