--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
-date:   2016-12-02 19:06:33 -0800
+#date:   2016-12-02 19:06:33 -0800
 ---
 
 <div class="page-introduction" id="introduction">
